--- a/index.css
+++ b/index.css
@@ -35,7 +35,7 @@ h4 {
 }
 
 .Apply li {
-    padding: 12px;
+    padding: 12px 12px 12px 0;
     border-bottom: 1px solid #eee;
     position: relative;
 }
