--- a/index.css
+++ b/index.css
@@ -63,6 +63,10 @@ h4 {
     width: 100%;
 }
 
+.Apply input[type="submit"] {
+    width: 98%;
+}
+
 .Apply textarea {
     padding: 8px;
     width: 100%;
