--- a/index.css
+++ b/index.css
@@ -79,3 +79,90 @@ h4 {
     font-weight: bolder;
     width: 100%;
 }
+
+.Logo {
+    text-align: center;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+.Hero {
+    width: 100%;
+    height: auto;
+}
+
+.Company-name {
+    color: rgb(36, 141, 108);
+    text-align: center;
+    width: 100%;
+    line-height: 120%;
+    font-size: 3em;
+    margin-bottom: 20px;
+}
+
+#vacancies {
+    list-style: none;
+}
+
+.Col-container {
+    width: 100%;
+}
+
+.col {
+    float: left;
+    width: 31%;
+    margin-left: 1%;
+    margin-right: 1%;
+    min-height: 400px;
+    background-position: top;
+    background-repeat: no-repeat;
+    padding-top: 210px;
+}
+
+.col p, h2 {
+    padding-left: 20px;
+}
+
+.col p {
+    width: 88%;
+    max-width: 88%;
+}
+
+#Advice {
+    background-image: url("img/743737581.jpg.png");
+}
+
+#Training {
+    background-image: url("img/232565272.jpg.png");
+}
+
+#Volunteers {
+    background-image: url("img/690606281.jpg");
+}
+
+.Social {
+    color: rgb(58, 150, 184);
+    font-size: large;
+}
+
+.Social:first-child {
+    padding-left: 0px;
+}
+
+.Social, .Social-container, .Footer {
+    margin-left: 1%;
+    padding-left: 20px;
+}
+
+.Social-container h3 {
+    color: rgb(36, 141, 108);
+}
+
+.Footer {
+    font-size: .8em;
+}
+
+.Footer a {
+    color: inherit;
+    text-decoration: none;
+}
