--- a/index.css
+++ b/index.css
@@ -149,13 +149,17 @@ h4 {
     padding-left: 0px;
 }
 
-.Social, .Social-container, .Footer {
+.Social, .Social-container, .Footer, .Body-container {
     margin-left: 1%;
     padding-left: 20px;
 }
 
 .Social-container h3 {
     color: rgb(36, 141, 108);
+}
+
+.Body-container {
+
 }
 
 .Footer {
