--- a/index.css
+++ b/index.css
@@ -55,21 +55,21 @@ h4 {
     width: 94%;
 }
 
-.Apply input {
+.Apply input[type="email"],
+.Apply input[type="text"]
+{
     display: block;
-    height: 20px;
+    height: 30px;
     padding: 5px 8px;
     width: 100%;
-}
-
-.Apply input[type="submit"] {
-    width: 98%;
+    font-size: larger;
 }
 
 .Apply textarea {
-    min-height: 100px;
+    min-height: 200px;
     padding: 8px;
     width: 100%;
+    font-size: larger;
 }
 
 /* Only shown if validation is done by index.js instead of by browser */
@@ -158,10 +158,6 @@ h4 {
     color: rgb(36, 141, 108);
 }
 
-.Body-container {
-
-}
-
 .Footer {
     font-size: .8em;
 }
@@ -169,4 +165,25 @@ h4 {
 .Footer a {
     color: inherit;
     text-decoration: none;
+}
+
+/* With thanks to http://www.graemeboy.com/css-buttons */
+.styled-button-9 {
+    background: #00A0D1;
+    background: -moz-linear-gradient(top, #00A0D1 0%, #008DB8 100%);
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #00A0D1), color-stop(100%, #008DB8));
+    background: -webkit-linear-gradient(top, #00A0D1 0%, #008DB8 100%);
+    background: -o-linear-gradient(top, #00A0D1 0%, #008DB8 100%);
+    background: -ms-linear-gradient(top, #00A0D1 0%, #008DB8 100%);
+    background: linear-gradient(top, #00A0D1 0%, #008DB8 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00A0D1', endColorstr='#008DB8', GradientType=0);
+    padding: 8px 20px;
+    color: #cfebf3;
+    font-family: 'Helvetica Neue', sans-serif;
+    font-size: 13px;
+    border-radius: 40px;
+    -moz-border-radius: 40px;
+    -webkit-border-radius: 40px;
+    border: 1px solid #095B7E;
+    cursor: pointer;
 }
