--- a/index.css
+++ b/index.css
@@ -187,3 +187,16 @@ h4 {
     border: 1px solid #095B7E;
     cursor: pointer;
 }
+
+#volunteerTable, #projectTable {
+    border-color: gray;
+    border-style: solid;
+    padding: 3px;
+}
+
+#volunteerTable th,
+#volunteerTable td,
+#projectTable th,
+#projectTable td {
+    border: 1px solid gray;
+}
